--- a/MWDW2/Assignment1/index.html
+++ b/MWDW2/Assignment1/index.html
@@ -6,6 +6,18 @@
     <title>Assignment 1 Solutions</title>
 </head>
 <body>
+    <!-- Q3 -->
+    <!-- <div>
+        1st number: <input type="number" id="n1">
+        <br>
+        2nd number: <input type="number" id="n2">
+        <br>
+        <button onclick="q3M()">Multiply</button>
+        <button onclick="q3D()">Divide</button>
+        <br>
+        The result is: <p></p>
+    </div> -->
+
     <script src="sol.js"></script>
 </body>
 </html>
