--- a/MWDW2/Assignment2/index.html
+++ b/MWDW2/Assignment2/index.html
@@ -6,6 +6,11 @@
     <title>Assignment 2 Solutions</title>
 </head>
 <body>
+    <!-- Q4 -->
+    <!-- <h1>Scores</h1>
+    Computer: <p id="comp">0</p>
+    User: <p id="user">0</p> -->
+
     <script src="sol.js"></script>
 </body>
 </html>
