Update MWDW2 Assignment 3 files

--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -27,7 +27,7 @@
         Age: <input type="number" name="age"><br><br>
         Email: <input type="email" name="email"><br><br>
         <input type="submit">
-    </form><br> -->
+    </form> -->
 
     <!-- Q6
     <form>
@@ -39,13 +39,13 @@
         Email: <input type="radio" name="same" value="email"><br><br>
         Enter data: <input type="text" name="text" value="1"><br><br>
         <input type="submit">
-    </form><br> -->
+    </form> -->
 
     <!-- Q7
     <p></p> -->
 
     <!-- Q9 -->
-    <!-- <form>
+    <form>
         ID: <input type="radio" name="same" value="id" checked>
         Name: <input type="radio" name="same" value="name">
         Age: <input type="radio" name="same" value="age">
@@ -54,10 +54,10 @@
         Email: <input type="radio" name="same" value="email"><br><br>
         Enter data: <input type="text" name="text" value="1"><br><br>
         <input type="submit">
-    </form> -->
+    </form>
 
     <!-- Q10 -->
-    <div align='center'>
+    <!-- <div align='center'>
         <h1>Weather App</h1>
         <input placeholder='Enter location'>
         <button onclick='updateWeather()'>Search</button>
@@ -68,7 +68,7 @@
         Wind: <span id='wind'></span><br><br>
         Pressure: <span id='pressure'></span><br>
         <img>
-    </div>
+    </div> -->
     
     <script src="sol.js"></script>
 </body>
