Add COA Lab 2 post lab question 2 file

--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -6,31 +6,33 @@
     <title>Assignment 3 Solutions</title>
 </head>
 <body>
-    <!-- Q1
-    <div id='output'>Complete Javascript Course</div>
+    <!-- Q1 -->
+    <!-- <div id='output'>Complete Javascript Course</div>
     Filter: <input id='sText'><br>
     Update: <input id='rText'><br>
     <button>Update</button> -->
 
-    <!-- Q2
-    <div id='output'></div>
+    <!-- Q2 -->
+    <!-- <div id='output'></div>
     Enter email: <input>
     <button>Validate</button> -->
 
-    <!-- Q3
-    Enter here: <textarea></textarea><button>Search</button><br><br>
+    <!-- Q3 -->
+    <!-- Enter here: <textarea></textarea><button>Search</button><br><br>
     Output: <textarea></textarea> -->
 
-    <!-- Q5
-    <form onsubmit="return updateFields(this)">
+    <!-- Q5 -->
+    <!-- <form>
         Name: <input type="text" name="name"><br><br>
         Age: <input type="number" name="age"><br><br>
         Email: <input type="email" name="email"><br><br>
         <input type="submit">
-    </form> -->
+    </form><br>
+    Before: <p id="before"></p>
+    After: <p id="after"></p> -->
 
-    <!-- Q6
-    <form>
+    <!-- Q6 -->
+    <!-- <form>
         ID: <input type="radio" name="same" value="id" checked>
         Name: <input type="radio" name="same" value="name">
         Age: <input type="radio" name="same" value="age">
@@ -39,10 +41,14 @@
         Email: <input type="radio" name="same" value="email"><br><br>
         Enter data: <input type="text" name="text" value="1"><br><br>
         <input type="submit">
-    </form> -->
-
-    <!-- Q7
+    </form>
     <p></p> -->
+
+    <!-- Q7 -->
+    <!-- <p></p> -->
+
+    <!-- Q8 -->
+    <!-- <p></p> -->
 
     <!-- Q9 -->
     <form>
