Update MWDW2 assignment 3 solutions

--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -52,15 +52,14 @@
 
     <!-- Q9 -->
     <form>
-        ID: <input type="radio" name="same" value="id" checked>
-        Name: <input type="radio" name="same" value="name">
-        Age: <input type="radio" name="same" value="age">
-        Gender: <input type="radio" name="same" value="gender">
-        Occupation: <input type="radio" name="same" value="occupation">
-        Email: <input type="radio" name="same" value="email"><br><br>
-        Enter data: <input type="text" name="text" value="1"><br><br>
+        <select name="filter1">
+            <option value="tag">Tag</option>
+            <option value="attribule">Attribute</option>
+        </select><br><br>
+        Enter attribute (optional): <input type="text" name="text"><br><br>
         <input type="submit">
     </form>
+    <ol></ol>
 
     <!-- Q10 -->
     <!-- <div align='center'>
