Update MWDW2 Assignment 3

--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -52,11 +52,11 @@
 
     <!-- Q9 -->
     <form>
-        <select name="filter1">
+        <select name="filter">
+            <option value="attribute">Attribute</option>
             <option value="tag">Tag</option>
-            <option value="attribule">Attribute</option>
         </select><br><br>
-        Enter attribute (optional): <input type="text" name="text"><br><br>
+        Enter query: <input type="text" name="data" value="computers"><br><br>
         <input type="submit">
     </form>
     <ol></ol>
