Update MWDW2 Assignment 3

--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -51,15 +51,15 @@
     <!-- <p></p> -->
 
     <!-- Q9 -->
-    <form>
+    <!-- <form>
         <select name="filter">
-            <option value="attribute">Attribute</option>
             <option value="tag">Tag</option>
+            <option value="attribute">Attribute</option>
         </select><br><br>
-        Enter query: <input type="text" name="data" value="computers"><br><br>
+        Enter query: <input type="text" name="data"><br><br>
         <input type="submit">
     </form>
-    <ol></ol>
+    <ol></ol> -->
 
     <!-- Q10 -->
     <!-- <div align='center'>
