Update MWDW2 Assignment 3 sol.js

--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -51,15 +51,16 @@
     <!-- <p></p> -->
 
     <!-- Q9 -->
-    <!-- <form>
-        <select name="filter">
-            <option value="tag">Tag</option>
-            <option value="attribute">Attribute</option>
+    <!-- <form align="center">
+        Filter: <select name="filter">
+            <option value="current">Current</option>
+            <option value="aqi">AQI</option>
+            <option value="alerts">Alerts</option>
         </select><br><br>
-        Enter query: <input type="text" name="data"><br><br>
+        Enter location: <input type="text" name="location" placeholder="Enter location"><br><br>
         <input type="submit">
     </form>
-    <ol></ol> -->
+    <p align="center"></p> -->
 
     <!-- Q10 -->
     <!-- <div align='center'>
