--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -23,13 +23,13 @@
 
     <!-- Q5 -->
     <!-- <form>
-        Name: <input type="text" name="name"><br><br>
-        Age: <input type="number" name="age"><br><br>
+        Filter: <input type="number" placeholder="Enter ID"><br><br>
+        Name: <input type="text" id="name"><br><br>
+        Age: <input type="number" id="age"><br><br>
         Email: <input type="email" name="email"><br><br>
         <input type="submit">
     </form><br>
-    Before: <p id="before"></p>
-    After: <p id="after"></p> -->
+    <p id="msg"></p> -->
 
     <!-- Q6 -->
     <!-- <form>
@@ -48,7 +48,13 @@
     <!-- <p></p> -->
 
     <!-- Q8 -->
-    <!-- <p></p> -->
+    <!-- <form>
+        Filter: <input type="text" name="id" placeholder="Enter ID"><br><br>
+        Name: <input type="text" name="name"><br><br>
+        Age: <input type="number" name="age"><br>
+        <input type="submit">
+    </form>
+    <p id="msg"></p> -->
 
     <!-- Q9 -->
     <!-- <form align="center">
