--- a/MWDW2/Assignment3/index.html
+++ b/MWDW2/Assignment3/index.html
@@ -23,7 +23,7 @@
 
     <!-- Q5 -->
     <!-- <form>
-        Filter: <input type="number" placeholder="Enter ID"><br><br>
+        Filter: <input type="number" name="id" placeholder="Enter ID"><br><br>
         Name: <input type="text" id="name"><br><br>
         Age: <input type="number" id="age"><br><br>
         Email: <input type="email" name="email"><br><br>
