Update WMDW2 Assignment 4

--- a/MWDW2/Assignment4/q6.html
+++ b/MWDW2/Assignment4/q6.html
@@ -21,6 +21,7 @@
         cnv.height = 200
 
         function load() {
+            ctx.clearRect(0, 0, cnv.width, cnv.height)  // Clear canvas before writing again
             let txt = document.querySelector('input').value
             ctx.font = '20px Arial'
             ctx.textAlign = 'center';
