--- a/MWDW2/Assignment4/q3.html
+++ b/MWDW2/Assignment4/q3.html
@@ -1,5 +1,3 @@
-<!-- Incomplete -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,13 +15,66 @@
     <script>
         let cnv = document.querySelector('canvas'),
         ctx = cnv.getContext('2d')
-        console.log(cnv)
         cnv.width = 400
-        cnv.height = 200
+        cnv.height = 400
 
+        // Round face
+        ctx.beginPath()
+        ctx.arc(200, 100, 50, 0, Math.PI*2)
+        ctx.fillStyle = 'brown'
+        ctx.fill()
+        ctx.stroke()
+
+        // Left eye
+        ctx.beginPath()
+        ctx.arc(180, 90, 10, 0, Math.PI*2)
+        ctx.fillStyle = '#000'
+        ctx.fill()
+        ctx.stroke()
+
+        // Right eye
+        ctx.beginPath()
+        ctx.arc(220, 90, 10, 0, Math.PI*2)
+        ctx.fill()
+        ctx.stroke()
+
+        // Mouth
+        ctx.beginPath()
+        ctx.arc(200, 110, 30, 0, Math.PI)
+        ctx.fillStyle = '#000'
+        ctx.fill()
+        ctx.stroke()
+
+        // Nose
+        ctx.moveTo(200, 90)
+        ctx.lineTo(200, 100)
+        ctx.stroke()
+
+        // Hat
+        ctx.moveTo(150, 60)
+        ctx.lineTo(250, 60)
+        ctx.lineTo(200, 40)
+        ctx.lineTo(150, 60)
         ctx.fillStyle = '#008080'
-        ctx.fillRect(20, 40, 100, 100)
-        ctx.arc(200, 90, 40, 0, Math.PI*2)
+        ctx.fill()
+        ctx.stroke()
+
+        // Body
+        ctx.moveTo(200, 150)
+        ctx.lineTo(200, 220)
+        ctx.stroke()
+
+        // Hands
+        ctx.moveTo(140, 170)
+        ctx.lineTo(260, 170)
+        ctx.stroke()
+
+        // Legs
+        ctx.moveTo(200, 220)
+        ctx.lineTo(140, 280)
+        ctx.stroke()
+        ctx.moveTo(200, 220)
+        ctx.lineTo(260, 280)
         ctx.stroke()
     </script>
 </body>
