--- a/MWDW2/Assignment4/q3.html
+++ b/MWDW2/Assignment4/q3.html
@@ -51,6 +51,7 @@
         ctx.stroke()
 
         // Hat
+        ctx.beginPath()
         ctx.moveTo(150, 60)
         ctx.lineTo(250, 60)
         ctx.lineTo(200, 40)
