--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>All Files</title>
 </head>
 <body>
-    <h2>MWDW2</h2>
-    <ul>
-        <li><a href="./MWDW2/Assignment1/">A1</a> <a href="./Zips/MWDW2/Assignment1.zip">Download</a></li>
-        <li><a href="./MWDW2/Assignment2/">A2</a> <a href="./Zips/MWDW2/Assignment2.zip">Download</a></li>
-        <li><a href="./MWDW2/Assignment3/">A3</a> <a href="./Zips/MWDW2/Assignment3.zip">Download</a></li>
-        <li><a href="./MWDW2/Assignment4/">A4</a> <a href="./Zips/MWDW2/Assignment4.zip">Download</a></li>
-    </ul>
+    <div id="mwdw2">
+        <h2>MWDW2</h2>
+        <ul>
+            <li><a href="./MWDW2/Assignment1/">A1</a> <a href="#">Download</a></li>
+            <li><a href="./MWDW2/Assignment2/">A2</a> <a href="#">Download</a></li>
+            <li><a href="./MWDW2/Assignment3/">A3</a> <a href="#">Download</a></li>
+            <li><a href="./MWDW2/Assignment4/">A4</a> <a href="#">Download</a></li>
+        </ul>
+    </div>
 </body>
 </html>
