--- a/MWDW2/Assignment4/q4.html
+++ b/MWDW2/Assignment4/q4.html
@@ -10,8 +10,8 @@
 <body>
     <div>
         <button>Clear</button>
-        <span>Color</span> <input type="color">
-        <input type="range" min="5" max="20" value="10">
+        <span>Color</span> <input type="color" id="penColor">
+        <input id="penSize" type="range" min="5" max="20" value="10">
     </div><br>
     <canvas></canvas>
     <style>
@@ -25,6 +25,12 @@
         cnv.width = cnv.height = 500
 
         let btn = document.querySelector('button')
+        let penSize = document.querySelector('#penSize')
+        let penColor = document.querySelector('#penColor')
+
+        
+
+
         btn.addEventListener('click', e => {
             if (confirm('Confirm clear?'))
                 ctx.clearRect(0, 0, cnv.width, cnv.height)
