--- a/MWDW2/Assignment4/q4.html
+++ b/MWDW2/Assignment4/q4.html
@@ -1,5 +1,3 @@
-<!-- Incomplete -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,17 +18,39 @@
         }
     </style>
     <script>
+        window.onload =  init
+
         let cnv = document.querySelector('canvas'),
         ctx = cnv.getContext('2d')
-        cnv.width = cnv.height = 500
+        cnv.width = cnv.height = 400
 
         let btn = document.querySelector('button')
         let penSize = document.querySelector('#penSize')
         let penColor = document.querySelector('#penColor')
 
-        
-
-
+        let pos = {
+            x: 0, y: 0
+        }
+        function init() {
+            cnv.addEventListener('click', draw)
+            cnv.addEventListener('mouseover', setPos)
+            cnv.addEventListener('mouseenter', setPos)
+        }
+        function draw(e) {
+            // if (e.buttons !== 0) return
+            ctx.beginPath()
+            ctx.moveTo(pos.x, pos.y)
+            setPos(e)
+            ctx.lineTo(pos.x, pos.y)
+            ctx.strokeStyle = penColor.value
+            ctx.lineWidth = penSize.value
+            ctx.lineCap = 'round'
+            ctx.stroke()
+        }
+        function setPos(e) {
+            pos.x = e.offsetX
+            pos.y = e.offsetY
+        }
         btn.addEventListener('click', e => {
             if (confirm('Confirm clear?'))
                 ctx.clearRect(0, 0, cnv.width, cnv.height)
