--- a/MWDW2/Assignment4/ignore.html
+++ b/MWDW2/Assignment4/ignore.html
@@ -6,6 +6,8 @@
     <title>MWDW2 Assignment 4</title>
 </head>
 <body>
+    <!-- This html file is only for navigation purpose -->
+    
     <h1>MWDW2 Assignment 4</h1>
     <ol style="line-height:2rem">
         <li><a href="./q1.html">Q1</a></li>
