--- a/index.html
+++ b/index.html
@@ -6,21 +6,98 @@
     <title>Main Index</title>
 </head>
 <body>
-    <h1>All assignments & lab works</h1>
+    <!-- This html file is for navigation purpose only! -->
+    
+    <h1>Assignments & lab works</h1>
     <ul>
         <li><h2>MWDW2</h2></li>
-        <ol>
-            <li><a href="./MWDW2/Assignment4/">Assignment 4</a></li>
+        <ol style="line-height:2rem">
+            <details>
+                <summary>Assignment 1</summary>
+                <ol>
+                    <!-- <li><a href="./MWDW2/Assignment4/q1.html">Q1</a></li>
+                    <li><a href="./MWDW2/Assignment4/q2.html">Q2</a></li>
+                    <li><a href="./MWDW2/Assignment4/q3.html">Q3</a></li>
+                    <li><a href="./MWDW2/Assignment4/q4.html">Q4</a></li>
+                    <li><a href="./MWDW2/Assignment4/q5.html">Q5</a></li>
+                    <li><a href="./MWDW2/Assignment4/q6.html">Q6</a></li>
+                    <li><a href="./MWDW2/Assignment4/q7.html">Q7</a></li>
+                    <li><a href="./MWDW2/Assignment4/q8.html">Q8</a> (incomplete)</li>
+                    <li><a href="./MWDW2/Assignment4/q9.html">Q9</a></li>
+                    <li><a href="./MWDW2/Assignment4/q10.html">Q10</a></li> -->
+                </ol>
+            </details>
+            <details>
+                <summary>Assignment 2</summary>
+                <ol>
+                    <!-- <li><a href="./MWDW2/Assignment4/q1.html">Q1</a></li>
+                    <li><a href="./MWDW2/Assignment4/q2.html">Q2</a></li>
+                    <li><a href="./MWDW2/Assignment4/q3.html">Q3</a></li>
+                    <li><a href="./MWDW2/Assignment4/q4.html">Q4</a></li>
+                    <li><a href="./MWDW2/Assignment4/q5.html">Q5</a></li>
+                    <li><a href="./MWDW2/Assignment4/q6.html">Q6</a></li>
+                    <li><a href="./MWDW2/Assignment4/q7.html">Q7</a></li>
+                    <li><a href="./MWDW2/Assignment4/q8.html">Q8</a> (incomplete)</li>
+                    <li><a href="./MWDW2/Assignment4/q9.html">Q9</a></li>
+                    <li><a href="./MWDW2/Assignment4/q10.html">Q10</a></li> -->
+                </ol>
+            </details>
+            <details>
+                <summary>Assignment 3</summary>
+                <ol>
+                    <!-- <li><a href="./MWDW2/Assignment4/q1.html">Q1</a></li>
+                    <li><a href="./MWDW2/Assignment4/q2.html">Q2</a></li>
+                    <li><a href="./MWDW2/Assignment4/q3.html">Q3</a></li>
+                    <li><a href="./MWDW2/Assignment4/q4.html">Q4</a></li>
+                    <li><a href="./MWDW2/Assignment4/q5.html">Q5</a></li>
+                    <li><a href="./MWDW2/Assignment4/q6.html">Q6</a></li>
+                    <li><a href="./MWDW2/Assignment4/q7.html">Q7</a></li>
+                    <li><a href="./MWDW2/Assignment4/q8.html">Q8</a> (incomplete)</li>
+                    <li><a href="./MWDW2/Assignment4/q9.html">Q9</a></li>
+                    <li><a href="./MWDW2/Assignment4/q10.html">Q10</a></li> -->
+                </ol>
+            </details>
+            <details>
+                <summary>Assignment 4</summary>
+                <ol>
+                    <li><a href="./MWDW2/Assignment4/q1.html">Q1</a></li>
+                    <li><a href="./MWDW2/Assignment4/q2.html">Q2</a></li>
+                    <li><a href="./MWDW2/Assignment4/q3.html">Q3</a></li>
+                    <li><a href="./MWDW2/Assignment4/q4.html">Q4</a></li>
+                    <li><a href="./MWDW2/Assignment4/q5.html">Q5</a></li>
+                    <li><a href="./MWDW2/Assignment4/q6.html">Q6</a></li>
+                    <li><a href="./MWDW2/Assignment4/q7.html">Q7</a></li>
+                    <li><a href="./MWDW2/Assignment4/q8.html">Q8</a> (incomplete)</li>
+                    <li><a href="./MWDW2/Assignment4/q9.html">Q9</a></li>
+                    <li><a href="./MWDW2/Assignment4/q10.html">Q10</a></li>
+                </ol>
+            </details>
         </ol>
+
         <li><h2>COA</h2></li>
-        <ol>
-            <li><a href="./MWDW2/Assignment4/">Assignment 4</a></li>
+        <ol style="line-height:2rem">
+            <details>
+                <summary>Labs</summary>
+                <ol>
+                    <li><a href="./COA/Lab1/">Lab 1</a></li>
+                    <li><a href="./COA/Lab2/">Lab 2</a></li>
+                    <li><a href="./COA/Lab3/">Lab 3</a></li>
+                </ol>
+            </details>
         </ol>
-        <li><h2>Ad2</h2></li>
-        <ol>
-            <li><a href="./MWDW2/Assignment4/">Assignment 4</a></li>
+
+        <li><h2>AD2</h2></li>
+        <ol style="line-height:2rem">
+            <details>
+                <summary>Labs</summary>
+                <ol>
+                    <li><a href="./AD2/2602.java">Lab 1</a></li>
+                    <li><a href="./AD2/Graph.java">Lab 2</a></li>
+                    <li><a href="./AD2/Lab3.java">Lab 3</a></li>
+                    <li><a href="./AD2/HashTableLP.java">Lab 4</a></li>
+                </ol>
+            </details>
         </ol>
     </ul>
-    
 </body>
 </html>
