--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li><a href="./MWDW2/Assignment4/q5.html">Q5</a></li>
                     <li><a href="./MWDW2/Assignment4/q6.html">Q6</a></li>
                     <li><a href="./MWDW2/Assignment4/q7.html">Q7</a></li>
-                    <li><a href="./MWDW2/Assignment4/q8.html">Q8</a> (incomplete)</li>
+                    <li><a href="./MWDW2/Assignment4/q8.html">Q8</a></li>
                     <li><a href="./MWDW2/Assignment4/q9.html">Q9</a></li>
                     <li><a href="./MWDW2/Assignment4/q10.html">Q10</a></li>
                 </ol>
