--- a/MWDW2/Assignment4/q3.html
+++ b/MWDW2/Assignment4/q3.html
@@ -6,17 +6,11 @@
     <title>Canvas Hero - Q3</title>
 </head>
 <body>
-    <canvas></canvas>
-    <style>
-        canvas {
-            border: 1px solid #000;
-        }
-    </style>
+    <canvas style="border:1px solid #000;"></canvas>
     <script>
-        let cnv = document.querySelector('canvas'),
+        cnv = document.querySelector('canvas')
         ctx = cnv.getContext('2d')
-        cnv.width = 400
-        cnv.height = 400
+        cnv.width = cnv.height = 400
 
         // Round face
         ctx.beginPath()
