--- a/MWDW2/Assignment4/q7.html
+++ b/MWDW2/Assignment4/q7.html
@@ -15,17 +15,17 @@
         }
     </style>
     <script>
-        let cnv1 = document.querySelector('#c1'),
+        cnv1 = document.querySelector('#c1')
         ctx1 = cnv1.getContext('2d')
-        let cnv2 = document.querySelector('#c2'),
+        cnv2 = document.querySelector('#c2')
         ctx2 = cnv2.getContext('2d')
-        let cnv3 = document.querySelector('#c3'),
+        cnv3 = document.querySelector('#c3')
         ctx3 = cnv3.getContext('2d')
         cnv1.width = cnv2.width = cnv3.width = 300
         cnv1.height = cnv2.height = cnv3.height = 200
 
-        ctx1.strokeRect(20, 40, 200, 100)
-        ctx2.arc(150, 60, 40, 0, Math.PI*2)
+        ctx1.strokeRect(50, 50, 200, 100)
+        ctx2.arc(150, 100, 50, 0, Math.PI*2)
         ctx2.stroke()
 
         ctx3.drawImage(cnv1, 0, 0)
