--- a/index.html
+++ b/index.html
@@ -79,9 +79,43 @@
             <details>
                 <summary>Labs</summary>
                 <ol>
-                    <li><a href="./COA/Lab1/">Lab 1</a></li>
-                    <li><a href="./COA/Lab2/">Lab 2</a></li>
-                    <li><a href="./COA/Lab3/">Lab 3</a></li>
+                    <li>
+                        <details>
+                            <summary>Lab 1</summary>
+                            <ol>
+                               <li><a href="./COA/Lab1/obj1.asm">Obj 1</a></li>
+                               <li><a href="./COA/Lab1/obj2i.asm">Obj 2i</a></li>
+                               <li><a href="./COA/Lab1/obj2ii.asm">Obj 2ii</a></li>
+                               <li><a href="./COA/Lab1/obj3.asm">Obj 3</a></li>
+                               <li><a href="./COA/Lab1/obj4.asm">Obj 4</a></li>
+                            </ol>
+                        </details>
+                    </li>
+                    <li>
+                        <details>
+                            <summary>Lab 2</summary>
+                            <ol>
+                               <li><a href="./COA/Lab2/obj1.asm">Obj 1</a></li>
+                               <li><a href="./COA/Lab2/obj2.asm">Obj 2</a></li>
+                               <li><a href="./COA/Lab2/obj3.asm">Obj 3</a></li>
+                               <li><a href="./COA/Lab2/obj4.asm">Obj 4</a></li>
+                               <li><a href="./COA/Lab2/postlab1.asm">Postlab 1</a></li>
+                               <li><a href="./COA/Lab2/postlab2.asm">Postlab 2</a></li>
+                            </ol>
+                        </details>
+                    </li>
+                    <li>
+                        <details>
+                            <summary>Lab 3</summary>
+                            <ol>
+                               <li><a href="./COA/Lab3/obj1largest.asm">Obj 1 largest</a></li>
+                               <li><a href="./COA/Lab3/obj1smallest.asm">Obj 1 smallest</a></li>
+                               <li><a href="./COA/Lab3/obj2asc.asm">Obj 2 ascending</a></li>
+                               <li><a href="./COA/Lab3/obj2desc.asm">Obj 2 descending</a></li>
+                               <li><a href="./COA/Lab3/postlab-3.asm">Postlab</a></li>
+                            </ol>
+                        </details>
+                    </li>
                 </ol>
             </details>
         </ol>
