--- a/MWDW2/Assignment4/q1.html
+++ b/MWDW2/Assignment4/q1.html
@@ -6,14 +6,22 @@
     <title>Canvas - Q1</title>
 </head>
 <body>
-    <canvas style="border:1px solid #000;"></canvas>
+    <canvas></canvas>
+    <style>
+        canvas {
+            border: 1px solid #000;
+        }
+    </style>
     <script>
-        cnv = document.querySelector('canvas')
+        let cnv = document.querySelector('canvas'),
         ctx = cnv.getContext('2d')
-        cnv.width = 400; cnv.height = 200
+        console.log(cnv)
+        cnv.width = 400
+        cnv.height = 200
+
         ctx.fillStyle = '#008080'
-        ctx.fillRect(100, 40, 100, 100)
-        ctx.arc(250, 90, 40, 0, Math.PI * 2)
+        ctx.fillRect(20, 40, 100, 100)
+        ctx.arc(200, 90, 40, 0, Math.PI*2)
         ctx.stroke()
     </script>
 </body>
