--- a/MWDW2/Assignment4/q2.html
+++ b/MWDW2/Assignment4/q2.html
@@ -6,11 +6,19 @@
     <title>Canvas - Q2</title>
 </head>
 <body>
-    <canvas style="border:1px solid #000;"></canvas>
+    <canvas></canvas>
+    <style>
+        canvas {
+            border: 1px solid #000;
+        }
+    </style>
     <script>
-        cnv = document.querySelector('canvas')
+        let cnv = document.querySelector('canvas'),
         ctx = cnv.getContext('2d')
-        cnv.width = 400; cnv.height = 200
+        console.log(cnv)
+        cnv.width = 400
+        cnv.height = 200
+
         ctx.fillStyle = '#008080'
         ctx.fillRect(5, 5, 390, 190)
         ctx.clearRect(40, 40, 320, 120)
