--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <details>
                 <summary>Labs</summary>
                 <ol>
-                    <li><a href="https://code.jquery.com/jquery-3.7.1.min.js" download>Lab 1</a></li>
+                    <li><a href="./AD2/2602.java">Lab 1</a></li>
                     <li><a href="./AD2/Graph.java">Lab 2</a></li>
                     <li><a href="./AD2/Lab3.java">Lab 3</a></li>
                     <li><a href="./AD2/HashTableLP.java">Lab 4</a></li>
