Add AD2 lab 6 path

--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
                     <li><a href="./AD2/Graph.java">Lab 2</a></li>
                     <li><a href="./AD2/Lab3.java">Lab 3</a></li>
                     <li><a href="./AD2/HashTableLP.java">Lab 4</a></li>
+                    <li>
+                        <details>
+                            <summary>Lab 6</summary>
+                            <ol>
+                                <li><a href="./AD2//0605/activityScheduling.java">Activity scheduling</a></li>
+                                <li><a href="./AD2//0605/fractionalKnapsack.java">Fractional Knapsack</a></li>
+                                <li><a href="./AD2//0605/huffman.java">Huffman coding</a></li>
+                            </ol>
+                        </details>
+                    </li>
                 </ol>
             </details>
         </ol>
