Update puzzle game

--- a/MWDW2/Assignment4/q8.html
+++ b/MWDW2/Assignment4/q8.html
@@ -6,7 +6,7 @@
     <title>Canvas Puzzle - Q8</title>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="300" height="300"></canvas>
     <script src="./q8sol.js"></script>
 </body>
 </html>
