Update link to COA Lab 4

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
                             </ol>
                         </details>
                     </li>
+                    <li>
+                        <details>
+                            <summary>Lab 4</summary>
+                            <ol>
+                               <li><a href="./COA/Lab4/obj1.s">Obj 1</a></li>
+                               <li><a href="./COA/Lab4/obj2.s">Obj 2</a></li>
+                               <li><a href="./COA/Lab4/obj3.s">Obj 3</a></li>
+                            </ol>
+                        </details>
+                    </li>
                 </ol>
             </details>
         </ol>
