--- a/MWDW2/Assignment4/q8.html
+++ b/MWDW2/Assignment4/q8.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <canvas id="canvas" width="300" height="300"></canvas>
-    <script src="./q8sol.js"></script>
+    <script src="./q8solWorking.js"></script>
 </body>
 </html>
