--- a/MWDW2/Assignment4/q8.html
+++ b/MWDW2/Assignment4/q8.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <canvas id="canvas" width="300" height="300"></canvas>
+
+    <!-- Don't write the path like "q8solWorking.js"!
+         Write either "sol.js" or the whole script in the script tag.
+    N.B. q8solLess.js is 90-100 lines & partially working
+         q8solWorking is 200+ lines & completely working. -->
     <script src="./q8solWorking.js"></script>
 </body>
 </html>
