--- a/MWDW2/Assignment4/q8.html
+++ b/MWDW2/Assignment4/q8.html
@@ -10,8 +10,8 @@
 
     <!-- Don't write the path like "q8solWorking.js"!
          Write either "sol.js" or the whole script in the script tag.
-    N.B. q8solLess.js is 90-100 lines & partially working
-         q8solWorking is 200+ lines & completely working. -->
+    N.B. q8solLess.js has 90-100 lines & partially working
+         q8solWorking.js has 200+ lines & completely working. -->
     <script src="./q8solWorking.js"></script>
 </body>
 </html>
